# simple-dns-server

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
config/: config.txt  zone-example1.org.txt
include/: builder.hpp  collection.hpp  packet.hpp  record.hpp  server.hpp  strategy.hpp  util.hpp  utils.hpp
src/: CMakeLists.txt  builder.cpp  collection.cpp  main.cpp  packet.cpp  server.cpp  server.hpp  strategy.cpp  util.cpp  utils.cpp  utils.hpp
